# izyploy

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  compose.yaml  knowledge.md
docs/: manual-docker-workflow.md
docs/milestones/: milestone-01-manual-docker-workflow.md  milestone-02-rust-api-skeleton.md  milestone-03-application-persistence.md  milestone-04-background-git-clone.md  milestone-05-docker-image-build.md  milestone-06-application-runtime.md  milestone-07-lifecycle-and-recovery.md  milestone-08-docker-outside-of-docker.md
migrations/: 202607210001_create_applications.sql  202607210002_add_source_ready_status.sql  202607210003_create_deployment_logs.sql  202607220001_add_image_ready_status.sql
spec/: implementation-plan.md  product-spec.md
src/: app.rs  database.rs  docker.rs  error.rs  git.rs  lib.rs  main.rs  runtime.rs  state.rs
src/applications/: deployment.rs  mod.rs  model.rs  repository.rs  routes.rs  source.rs  validation.rs
src/routes/: health.rs
src/system/: mod.rs  routes.rs
tests/: applications.rs  deployment_preparation.rs  health.rs  source_preparation.rs
