[package]
name = "izyploy"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A learning-oriented mini-PaaS for trusted Dockerized applications"
license = "MIT"

[dependencies]
axum = "0.8.9"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.52", features = ["macros", "net", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
serde_json = "1.0"
tower = { version = "0.5", features = ["util"] }
