[package]
name = "izyploy"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A learning-oriented mini-PaaS for trusted Dockerized applications"
license = "MIT"

[dependencies]
axum = "0.8.9"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros"] }
tokio = { version = "1.52", features = ["fs", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5"
uuid = { version = "1.18", features = ["serde", "v4"] }

[dev-dependencies]
serde_json = "1.0"
tempfile = "3.20"
tower = { version = "0.5", features = ["util"] }
